sampler/chain/projects/litiengine/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/gui/GuiComponent.java:35: error: [NullAway] (INDEX= 303) (Covered) @NonNull static field ICON_FONT not initialized
  protected static final Font ICON_FONT;
                              ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/Tileset.java:169: error: [NullAway] (INDEX= 125) (Covered) returning @Nullable expression from method with @NonNull return type
          return null;
          ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/MapObject.java:101: error: [NullAway] (INDEX= 79) (Covered) assigning @Nullable expression to @NonNull field
    this.polygon = (original.getPolygon() != null && !original.getPolygon().getPoints().isEmpty()) ? new PolyShape(original.getPolygon()) : null;
                 ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/CustomProperty.java:187: error: [NullAway] (INDEX= 224) (Covered) returning @Nullable expression from method with @NonNull return type
    return null;
    ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/GameWindow.java:60: error: [NullAway] (INDEX= 298) (Covered) initializer method does not guarantee @NonNull fields resolution (line 57), screenLocation (line 58) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  GameWindow() {
  ^

	(see http://t.uber.com/nullaway )
